--- a/demo.html
+++ b/demo.html
@@ -93,7 +93,7 @@
       </section>
       <section>
         <h2>Basic Usage</h2>
-        <p>Just requires a button inside the component</p>
+        <p>Just requires a child element</p>
         <key-down data-key="a">
           <button onclick="window.alert(`The press 'a' button was pressed`)">
             Press 'a' key
