--- a/demo.html
+++ b/demo.html
@@ -52,6 +52,11 @@
 						<a href="https://www.npmjs.com/package/@zicklepop/key-down">NPM</a>
 					</key-down>
 				</li>
+				<li>
+					<key-down data-key="j">
+						<a href="https://jsr.io/@zicklepop/key-down">JSR</a>
+					</key-down>
+				</li>
 			</ul>
 		</nav>
 		<main>
